--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "buffer": "^5.4.0",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
     "expo-barcode-scanner": "~6.0.0",
@@ -24,7 +25,11 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-modal": "^11.3.1",
+    "react-native-paper": "^2.16.0",
+    "react-native-uuid": "^1.4.9",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
