--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-modal": "^11.3.1",
-    "react-native-paper": "^2.16.0",
     "react-native-uuid": "^1.4.9",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
